# prospector-llm

./: .gitignore  COPILOT_KICKOFF.md  README.md  _run_tests.py  frontend_build.txt  package.json  pyrightconfig.json  test_errors.txt  test_latest_output.txt
backend/: .env.example  __tmp_check_bounce_db.py  __tmp_check_email_account.py  __tmp_check_unipile.py  __tmp_cleanup_bounce_lead.py  __tmp_inspect_bounce_setup.py  __tmp_replay_bounce_webhook.py  __tmp_run_email_poll.py  __tmp_send_bounce_test.py  __tmp_watch_bounce.py  _apply_044.py  _apply_045.py  _batch_fetch_params.py  _check_all_enums.py  _check_analytics.py  _check_cache.py  _check_chat_fields.py  _check_db_state.py  _check_enums.py  _check_migration_state.py  _check_numeric_chats.py  _check_unipile_attachments.py  _clear_inbox_cache.py  _debug_accounts.py  _debug_all_chats.py  _debug_enrich.py  _debug_enrich2.py  _debug_enrich3.py  _debug_enrich_output.txt  _debug_enrich_output2.txt  _debug_linkedin_search_fields.py  _debug_messages_deep.py  _debug_previews.py  _debug_profile2.py  _debug_profile3.py  _debug_profile4.py  _debug_profile_fields.py  _debug_unipile_chats.py  _debug_unipile_fields.py  _extract_pdfs.py  (+21 more)
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_tenant_api_key.py  003_add_users.py  004_interaction_direction_enum.py  005_cadence_steps_template.py  006_cadence_tts_fields.py  007_add_lead_extra_fields.py  008_create_lead_lists.py  009_add_manual_task_channel.py  010_add_lead_list_id_to_cadences.py  011_audio_files_and_s3.py  012_add_tts_speed.py  013_add_tts_pitch.py  014_add_sandbox_tables.py  015_add_cadence_context_fields.py  016_add_step_type_to_sandbox_steps.py  017_add_semi_manual_cadence.py  018_create_lead_tags.py  019_add_linkedin_posts_json.py  020_add_new_enum_values.py  021_cold_email_base_fields.py  022_email_templates.py  023_email_unsubscribes.py  024_email_accounts.py  025_cadence_email_account.py  026_warmup.py  (+77 more)
backend/api/: dependencies.py  main.py
backend/core/: branding.py  config.py  database.py  file_security.py  logging.py  redis_client.py  security.py
backend/docker/: Dockerfile.api  Dockerfile.worker
backend/docs/: ARCHITECTURE.md  ENVIRONMENTS.md  LLM.md  SKILLS.md  UNIPILE_WEBHOOK.md  XTTS_VOICE_CLONING_PLAN.md  exemplo_body_feed_linkedin.md  logs_sistema.md  prospector-engagement-scanner-scope.md
backend/integrations/: apify_client.py  context_fetcher.py  linkedin_voyager.py  notion_client.py  pipedrive_client.py  s3_client.py  sendpulse_client.py  speechify_client.py  unipile_client.py  zerobounce.py
backend/models/: __init__.py  account_audit_log.py  anthropic_batch_job.py  audio_file.py  base.py  cadence.py  cadence_step.py  capture_execution_log.py  capture_schedule.py  content_article.py  content_calculator_result.py  content_engagement_comment.py  content_engagement_discovery_query.py  content_engagement_event.py  content_engagement_post.py  content_engagement_session.py  content_extension_capture.py  content_gallery_image.py  content_landing_page.py  content_lead_magnet.py  content_linkedin_account.py  content_lm_email_event.py  content_lm_lead.py  content_lm_post.py  content_newsletter.py  content_post.py  content_post_revision.py  content_publish_log.py  content_reference.py  content_settings.py  content_theme.py  email_account.py  email_template.py  email_unsubscribe.py  enrichment_job.py  enums.py  interaction.py  lead.py  lead_contact_point.py  lead_email.py  (+13 more)
backend/preview/: calculator_diagnosis_email_preview.html  calculator_diagnosis_email_preview.json  lm_delivery_email_link.html  lm_delivery_email_pdf.html  lm_delivery_email_sequence.html  sandbox_editorial_audit.md
backend/scheduler/: beats.py
backend/schemas/: account_audit_log.py  audio_file.py  browser_extension.py  cadence.py  capture_schedule.py  content.py  content_article.py  content_engagement.py  content_inbound.py  content_newsletter.py  email_account.py  email_template.py  enrichment_job.py  inbox.py  interaction.py  lead.py  lead_list.py  linkedin_account.py  manual_task.py  sandbox.py  security_audit_log.py  tenant.py  tenant_user.py  user.py
backend/scripts/: generate_calculator_email_preview.py  generate_lm_delivery_email_previews.py  poc_linkedin_comment.py  repair_low_confidence_email_replies.py  run_sandbox_editorial_audit.py  seed_leads.py  simulate_manual_task_flow.py  upload_branding_assets.py  verify_object_storage_restore.py  verify_restore_target.py
backend/services/: account_audit_log_service.py  ai_composer.py  anthropic_batch_service.py  browser_extension.py  cadence_delivery_budget.py  cadence_manager.py  cadence_step_eligibility.py  contact_quality.py  conversation_assistant.py  editorial_validator.py  email_account_service.py  email_event_service.py  email_finder.py  email_footer.py  inbound_message_service.py  lead_generation.py  lead_management.py  lead_scorer.py  linkedin_account_service.py  linkedin_search_service.py  llm_config.py  llm_usage_tracker.py  manual_task_service.py  message_quality.py  message_template_renderer.py  notification.py  outreach_playbook.py  pipedrive_sync_service.py  reply_matching.py  reply_parser.py  sandbox_service.py  sector_templates.py  security_audit_log_service.py  tenant_access.py  test_email_service.py  warmup_service.py
backend/tests/: conftest.py  test_content_carousel_publish.py  test_content_generator_prompts.py  test_content_rules.py
backend/workers/: anthropic_batch.py  cadence.py  capture.py  celery_app.py  connection_check.py  content.py  content_engagement.py  content_lm_sync.py  content_voyager.py  dispatch.py  email_inbox_poll.py  enrich.py  enrichment_queue.py  linkedin_params_refresh.py  linkedin_poll.py  pipedrive_sync.py  warmup.py
(+508 files in other folders)
